--- a/low-code/node-red/.config.users.json
+++ b/low-code/node-red/.config.users.json
@@ -20,6 +20,9 @@
                     "pretty": true,
                     "json-view": true
                 }
+            },
+            "context": {
+                "flowRefresh": true
             }
         }
     }
