--- a/low-code/node-red/.config.nodes.json
+++ b/low-code/node-red/.config.nodes.json
@@ -618,5 +618,27 @@
                 "file": "/data/node_modules/@mnn-o/node-red-rabbitmq/build/src/nodes/amqp-in-manual-ack.js"
             }
         }
+    },
+    "node-red-contrib-influxdb": {
+        "name": "node-red-contrib-influxdb",
+        "version": "0.7.0",
+        "local": true,
+        "user": true,
+        "nodes": {
+            "influxdb": {
+                "name": "influxdb",
+                "types": [
+                    "influxdb",
+                    "influxdb out",
+                    "influxdb batch",
+                    "influxdb in"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-influxdb",
+                "file": "/data/node_modules/node-red-contrib-influxdb/influxdb.js"
+            }
+        }
     }
 }
